--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@octokit/rest": "^17.10.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
