--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "sonnet-18",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "dependencies": {
     "@octokit/rest": "^17.10.0",
     "next": "9.4.4",
+    "next-on-netlify": "^2.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
