--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.4.4",
     "next-on-netlify": "^2.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.8"
   }
 }
